--- a/templates/view.html
+++ b/templates/view.html
@@ -19,8 +19,7 @@
       </nav>
     </div>
     <main>
-    <h2 class="welcome">Welcome, <span id="username">{{ session['user'] }}</span>!</h2>
-    <p>Use the sidebar to make a selection</p>
+    <h2>View Hours Here</h2>
   </main>
 </body>
 </html>
